--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
 readme = "README.md"
+packages = [{ include = "isnet" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -14,6 +15,8 @@ torch = ">=1.0.0"
 ruff = ">=0.1.5"
 pytest = ">=6.0.0"
 mypy = ">=1.0.0"
+jupyterlab = "^4.2.4"
+ipywidgets = "^8.1.3"
 
 [tool.mypy]
 python_version = "3.10"
